----------------------------------------------------------------------
 OmegaT 2.5.1 update 1
----------------------------------------------------------------------
   2 Enhancements
   1 Bug fix
   0 Localisation updates
----------------------------------------------------------------------
2.5.1 update 1 vs. 2.5.1 

  Implemented requests:

  - Console: more context on error message "Failed to load..."
  http://sourceforge.net/support/tracker.php?aid=3465220

  - Navigate to next/previous segment with a note
  http://sourceforge.net/support/tracker.php?aid=3484729

  Bug fixes:

  - Remove Tags can create a corrupted target document
  http://sourceforge.net/support/tracker.php?aid=3487497

----------------------------------------------------------------------
 OmegaT 2.5.1
----------------------------------------------------------------------
  10 Enhancements
   1 Bug fix
   2 Localisation updates
----------------------------------------------------------------------
2.5.1 vs. 2.5.0 update 5

  Implemented requests:

  - Validate tags in console mode
  http://sourceforge.net/support/tracker.php?aid=3426212

  - Add patterns for text that should be removed and validate
  http://sourceforge.net/support/tracker.php?aid=3477099

  - User-defined tags
  http://sourceforge.net/support/tracker.php?aid=1599334

  - Validate Java MessageFormat pattern tags ({0} etc.)
  http://sourceforge.net/support/tracker.php?aid=3477045

  - Render tags in different color in editor
  http://sourceforge.net/support/tracker.php?aid=2120329

  - Add "date" & "time" to translated file name pattern
  http://sourceforge.net/support/tracker.php?aid=3346155

  - targetLocale for use with DotNetNuke ResX
  http://sourceforge.net/support/tracker.php?aid=3330974

  - Remove all tags
  http://sourceforge.net/support/tracker.php?aid=3481683

  - Create /tm/auto folder in new project
  http://sourceforge.net/support/tracker.php?aid=3368416

  Other enhancements:
